# aevoriumsite

./: pyproject.toml  requirements.txt
aevorium/: manage.py
aevorium/aevorium/: asgi.py  settings.py  urls.py  wsgi.py
aevorium/index/: admin.py  models.py  signals.py  urls.py  views.py
aevorium/index/migrations/: 0001_initial.py  0002_servers.py  0003_balances.py  0003_servers_description.py  0004_alter_servers_description.py  0004_profile.py  0005_donation_price.py  0005_users_token.py  0006_donation_mini_description.py
aevorium/index/static/index/: fonts.css  media.css  style.css
aevorium/index/templates/index/: deposit.html  forgot-password.html  index.html  layout.html  login.html  new-password.html  personal-cabinet.html  registration.html  shop.html  start.html
